minishift/templates/intygstjanst/deploy/service-intygstjanst.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: ErikDiskett
  labels:
    app: intygstjanst
    environment: test
  name: intygstjanst
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: intygstjanst
  sessionAffinity: None
  type: ClusterIP
